--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 ## Please do not remove line 5 - thanks! 🙂 ##
 ###############################################
 *.sketch
-./README-template.md
-./style-guide.md
+README-template.md
+style-guide.md
+design/
 # Avoid accidental XD or Figma upload if you convert the design file
 #######################################################
 ## Please do not remove lines 11 and 12 - thanks! 🙂 ##
